@@ -2,9 +2,11 @@ package com.invoiceapp.security;
 
 import com.invoiceapp.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class UserDetailsImpl implements UserDetails {
     private Long id;
@@ -25,7 +27,12 @@ public class UserDetailsImpl implements UserDetails {
 
     public Long getId() { return id; }
     public String getEmail() { return email; }
-    @Override public Collection<? extends GrantedAuthority> getAuthorities() { return Collections.emptyList(); }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+    }
+
     @Override public String getPassword() { return password; }
     @Override public String getUsername() { return username; }
     @Override public boolean isAccountNonExpired() { return true; }
